@@ -346,6 +346,7 @@ sub get_arg_spec {
         'passthru'          => \$opt->{passthru},
         'print0'            => \$opt->{print0},
         'proximate:1'       => \$opt->{proximate},
+        'P'                 => sub { $opt->{proximate} = 0 },
         'Q|literal'         => \$opt->{Q},
         'r|R|recurse'       => sub { $opt->{n} = 0 },
         's'                 => \$opt->{s},
